--- a/server/composer.json
+++ b/server/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "slim/slim": "^3.10"
+    },
+    "config": {
+        "platform": {
+            "php": "7.4.9"
+        }
     }
 }
