--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -17,11 +17,10 @@ jobs:
     - uses: actions/checkout@v2
     - working-directory: server
       run: composer validate
-    - working-directory: server
+    - uses: actions/cache@v2
       id: composer-cache
-      uses: actions/cache@v2
       with:
-        path: vendor
+        path: server/vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
